--- a/templates/recipe_editor.html
+++ b/templates/recipe_editor.html
@@ -15,7 +15,7 @@
                 </div>
                 <div class="input-field col s12 center">
                     <button class="btn waves-effect waves-light red" type="submit" id="delete-recipe" name="delete"
-                        formaction="/deleterecipe" onsubmit="return confirm('Are you sure you want to submit?');">Delete Recipe</button>
+                        formaction="/deleterecipe" onclick="return confirm('Are you sure you want to delete?');">Delete Recipe</button>
                 </div>
                 <div class="input-field col s12 center">
                     <button class="btn waves-effect waves-light green" type="submit" id="cancel-changes" name="cancel"
